[project]
name = "typing-conformance"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "basilisk-python",
    "jinja2",
    "markdown",
    "mypy",
    "pycroscope",
    "pyrefly",
    "pyright",
    "tomlkit",
    "ty",
    "types-markdown",
    "zuban",
]

[tool.uv]
package = false
