# Build system requirements.
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Project metadata
[project]
name = "typing_extensions"
version = "4.2.0"
description = "Backported and Experimental Type Hints for Python 3.7+"
readme = "README.rst"
requires-python = ">=3.7"
license.file = "LICENSE"
keywords = [
    "annotations",
    "backport",
    "checker",
    "checking",
    "function",
    "hinting",
    "hints",
    "type",
    "typechecking",
    "typehinting",
    "typehints",
    "typing"
]
# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development"
]

[project.urls]
Home = "https://github.com/python/typing/blob/master/typing_extensions/README.rst"
Repository = "https://github.com/python/typing"
Changes = "https://github.com/python/typing/blob/master/typing_extensions/CHANGELOG.md"
Documentation = "https://typing.readthedocs.io/"
"Bug Tracker" = "https://github.com/python/typing/issues"
"Q & A" = "https://github.com/python/typing/discussions"

# Project metadata -- authors. Flit stores this as a list of dicts, so it can't
# be inline above.
[[project.authors]]
name = "Guido van Rossum, Jukka Lehtosalo, Łukasz Langa, Michael Lee"
email = "levkivskyi@gmail.com"

[tool.flit.sdist]
include = [
    "CHANGELOG.md",
    "README.rst",
    "*/test*.py"
]
exclude = []
